# laravel-docs

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.translate  Dockerfile.translate.dockerignore  Makefile  README.md  docker-compose.yml  docusaurus.config.ts  package-lock.json  package.json  playwright.config.ts  versions.json
.claude/: settings.json
.claude/.supermemory-claude/: config.json.example
.codex/: config.toml
.github/agents/: code-reviewer.agent.md  documentation.agent.md  test-specialist.agent.md
.github/workflows/: deploy.yml  sync-docs.yml  update-docs.yml
e2e/: TEST_LIST_HOMEPAGE.md  TEST_LIST_NAV.md  build.spec.ts  dark-mode.spec.ts  homepage.spec.ts  navbar.spec.ts  navigation.spec.ts  seo.spec.ts
i18n/en/: code.json
i18n/ja/: code.json
i18n/ko/: code.json
scripts/: generate-frontmatter.js  generate-sidebars.js  generate-sidebars.ts  sync-docs.sh
source/: .env.example  init.py  main.py  prompt.md  pyproject.toml
source/tests/: test_anchor.py  test_sidebar.py  test_translation.py
source/utils/: anchor.py  common.py  docs.py  filtering.py  git.py  sidebar.py  token_counter.py  translation.py
src/css/: custom.css
src/pages/: index.js  index.tsx
src/remark/: auto-language-plugin.ts  github-alerts.js
src/theme/: Root.tsx  prism-include-languages.ts
static/: robots.txt
versioned_docs/version-11.x/: blade.md  (+95 more)
versioned_sidebars/: version-10.x-sidebars.json  version-11.x-sidebars.json  version-12.x-sidebars.json  version-13.x-sidebars.json  version-8.x-sidebars.json  version-9.x-sidebars.json  version-master-sidebars.json
(+391 files in other folders)
