[project]
name = "laravel-docs-translation"
version = "0.1.0"
description = "Laravel 문서 번역 자동화 도구"
authors = [
    {name = "kimchanhyung98", email = "kimchanhyung98@users.noreply.github.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0,<2",
    "openai>=1.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[dependency-groups]
dev = []
